--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <div id="canvas"></div>
 
-     <div class="modalFrame">
+     <div id="modalFrame">
        <div id="modal">
         <img src="images/winner.jpg" alt=" You are winner">
-        <button type="button" id="button">Play again</button>
+        <p><button type="button" id="button">Play again</button></p>
         <p>You reached the water <span id="score_water"></span> times</p>
-        <p>And your score is of : <span id="score"></span> points</p>
+        <p>And your score is  <span id="score"></span> points</p>
       </div>
 
      </div>
